Add setting for idea and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+Будет удалено .idea/TestWsl.iml
+Будет удалено .idea/dbnavigator.xml
+Будет удалено .idea/inspectionProfiles/
+Будет удалено .idea/misc.xml
+Будет удалено .idea/modules.xml
